add api view dentist personal profile
